--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,6 +2,7 @@
 layout: archive
 ---
 
+
 {{ content }}
 
 <h3 class="archive__subtitle">{{ site.data.ui-text[site.locale].recent_posts | default: "Recent Posts" }}</h3>
@@ -12,7 +13,7 @@ layout: archive
   {% assign posts = site.posts %}
 {% endif %}
 
-{% for post in posts %}
+{% for post in posts limit:5 %}
   {% include archive-single.html %}
 {% endfor %}
 
